guiTests with encoder gravitational support

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1602,6 +1602,20 @@
                                       </packing>
                                     </child>
                                     <child>
+                                      <widget class="GtkComboBox" id="combo_gui_tests">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="active">1</property>
+                                        <property name="items">EncoderGravitatoryCapture
+EncoderInertialCapture</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">True</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                    <child>
                                       <widget class="GtkButton" id="button_gui_tests">
                                         <property name="label">GUI TESTS</property>
                                         <property name="visible">True</property>
@@ -1612,7 +1626,7 @@
                                       <packing>
                                         <property name="expand">True</property>
                                         <property name="fill">True</property>
-                                        <property name="position">1</property>
+                                        <property name="position">2</property>
                                       </packing>
                                     </child>
                                   </widget>
@@ -19553,6 +19567,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
