--- a/glade/confirm_window.glade
+++ b/glade/confirm_window.glade
@@ -6,7 +6,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
-    <property name="title" translatable="yes">ChronoJump - Confirm</property>
+    <property name="title" translatable="yes">Chronojump - Confirm</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_delete_selected_jump_delete_event" swapped="no"/>
