--- a/glade/encoder_configuration.glade
+++ b/glade/encoder_configuration.glade
@@ -1031,7 +1031,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip" translatable="yes">Calcule inertial momentum</property>
+                            <property name="tooltip" translatable="yes">Calculate inertial momentum</property>
                             <signal name="clicked" handler="on_button_encoder_capture_inertial_show_clicked" swapped="no"/>
                             <child>
                               <widget class="GtkHBox" id="hbox12">
@@ -1042,7 +1042,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                                   <widget class="GtkLabel" id="label14">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Calcule IM</property>
+                                    <property name="label" translatable="yes">Calculate IM</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">True</property>
@@ -1533,7 +1533,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                   <widget class="GtkLabel" id="label15">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Calcule IM</property>
+                    <property name="label" translatable="yes">Calculate IM</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
