--- a/glade/error_window.glade
+++ b/glade/error_window.glade
@@ -6,7 +6,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
-    <property name="title" translatable="yes">ChronoJump</property>
+    <property name="title" translatable="yes">Chronojump</property>
     <property name="modal">True</property>
     <property name="window_position">center-always</property>
     <property name="type_hint">dialog</property>
